# GLFW-App

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.sh  cmake.sh  compile-commands.sh  meson.build  project  shell.nix  vcpkg.json
libs/: component.hpp  componentmanager.cpp  componentmanager.hpp  coordinator.cpp  linmath.h  system.cpp  system.hpp
libs/ecs/: componentarray.cpp  componentarray.hpp  componentmanager.cpp  componentmanager.hpp  coordinator.hpp  entity.cpp  entity.hpp
src/: main.cpp  meson.build  program.cpp  program.hpp
src/components/: meson.build  shader.cpp  shader.hpp
src/systems/: meson.build  shader-system.cpp  shader-system.hpp  shadersystem.cpp  shadersystem.hpp  window-system.cpp  window-system.hpp  windowsystem.cpp  windowsystem.hpp
